[package]
name = "rshort_link"
version = "0.1.0"
authors = ["exfly <exflyg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.6"
dotenv = "0.14"
actix-files = "0.1.4"
actix-web = "1.0"
actix-session = "0.2.0"
actix-redis = "0.6.1"
actix-identity = "0.1.0"
futures = "0.1.28"
serde = "1.0"
serde_derive = "1.0.69"
serde_json = "1.0.22"
uuid = { version = "0.7", features = ["serde", "v4"] }
juniper = "0.13"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.4"